[package]
name = "nicopap-ketos"
version = "0.13.0"
authors = ["Murarth <murarth@gmail.com>"]
edition = "2018"

description = "Fork of Ketos with a custom serde deserializer"

documentation = "https://docs.rs/ketos/"
homepage = "https://github.com/murarth/ketos"
repository = "https://github.com/murarth/ketos"

keywords = [ "scripting", "extension", "functional", "language", "lisp" ]
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
name = "ketos"
path = "src/ketos/lib.rs"

[dependencies]
byteorder = "1.3"
dirs = "4.0"
gumdrop = "0.8"
ketos_derive = { version = "0.12", path = "ketos_derive", optional = true }
num = "0.4"
serde = { version = "1.0", optional = true }
# Used only in `tests/value_derive.rs`
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
assert_matches = "1.0"
ketos_derive = { version = "0.12", path = "ketos_derive" }

[features]
default = []
derive = ["ketos_derive"]

[workspace]
